pamc/src/tests/sample_code/should_fail/type_check/wrong_number_of_case_params/expected_1_actually_0.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = match Nat.O {
    .O => Nat.O,
    .S => Nat.O,
};
